<resources>
    <string name="app_name">AppDicodingEvent</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="category">Seminar</string>
    <string name="owner">oleh: %1$s</string>
    <string name="quota">sisa kuota: %1$s</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="upcoming">Upcoming Events</string>
    <string name="finished">Finished Events</string>
    <string name="begin">Terbuka Hingga: %1$s</string>
    <string name="quota_detail">Sisa Kuota: %1$d</string>
    <string name="location">Lokasi: %1$s</string>
    <string name="search_hint">Cari event</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="register">Register</string>
    <string name="recomendation">Recommendation event for you!</string>
    <string name="detail">Detail Event</string>
    <string name="search">Search Event</string>
    <string name="tidak_ada_koneksi_internet">Connection Problem!</string>
    <string name="message_internet">Please check your internet connection</string>
    <string name="event_tidak_ditemukan">Event not found</string>
    <string name="message_not_found">Sorry, there are no events that match your search.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="image">Image Event</string>
    <string name="nama_event">Nama Event</string>
    <string name="recommendation_event_for_you">Recommendation event for you</string>
    <string name="no_connection">Connection Problem!</string>
    <string name="refresh">Refresh</string>
    <string name="quota_resgistrant">Quota Registrant</string>
    <string name="quotaresgistrant">QuotaRegis</string>
    <string name="begintime">Begin Time</string>
    <string name="ownername">Owner Name</string>
    <string name="image_event">Image Event</string>
    <string name="description">Description</string>
    <string name="add_to_favorite">Add to Favorite</string>

</resources>