<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_time_filled"
        android:title="@string/title_upcoming"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_event_finished"
        android:title="@string/title_finished"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:showAsAction="never"/>
</menu>