<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


 <androidx.cardview.widget.CardView
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:layout_marginTop="-20dp"
     android:backgroundTint="#193855"
     app:cardCornerRadius="20dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

   <TextView
       android:id="@+id/textView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/recommendation_event_for_you"
       android:textColor="#DCDCDC"
       app:layout_constraintEnd_toEndOf="@+id/txt_title_app"
       app:layout_constraintStart_toStartOf="@+id/txt_title_app"
       app:layout_constraintTop_toBottomOf="@+id/txt_title_app" />

   <TextView
       android:id="@+id/txt_title_app"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginHorizontal="16dp"
       android:layout_marginTop="30dp"
       android:text="@string/dicoding_event"
       android:textAlignment="center"
       android:textColor="#DCDCDC"
       android:textSize="24sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>

 <androidx.core.widget.NestedScrollView
     android:id="@+id/nestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_marginTop="5dp"
     android:fillViewport="true"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/cardView">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

   <TextView
       android:id="@+id/txt_upcoming_event"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="10dp"
       android:text="@string/upcoming"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <androidx.viewpager2.widget.ViewPager2
       android:id="@+id/carouselHome"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/txt_upcoming_event" />

   <TextView
       android:id="@+id/txt_finished_event"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="10dp"
       android:text="@string/finished"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/carouselHome" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rvFinishedHome"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
       android:layout_marginStart="4dp"
       android:layout_marginEnd="4dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/txt_finished_event" />

  </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>

 <ProgressBar
     android:id="@+id/progress_bar"
     style="?android:attr/progressBarStyle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:visibility="gone"
     android:indeterminateTint="@color/status_bar_color"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <include
     android:id="@+id/errorLayoutInclude"
     android:visibility="gone"
     layout="@layout/item_error_connection"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
